--- a/style/style.css
+++ b/style/style.css
@@ -127,6 +127,11 @@ a {
   font-size: 1.5rem;
 }
 
+.inline-block {
+  display: inline-block;
+  width: 100%;
+}
+
 .btn {
   background: #6452ff;
   padding: 1.5rem 2rem;
@@ -1006,6 +1011,30 @@ a[href^="tel"] {
 @media screen and (max-width: 1140px) {
   .container--center {
     margin: 3rem 0;
+  }
+}
+
+.container--text {
+  min-height: 40vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 3rem;
+  margin: 2rem 0;
+}
+
+@media screen and (max-width: 1140px) {
+  .container--text {
+    padding: 0;
   }
 }
 
