--- a/style/style.css
+++ b/style/style.css
@@ -266,6 +266,12 @@ a {
   color: #6452ff;
 }
 
+.btn--disabled {
+  cursor: not-allowed;
+  opacity: 1;
+  pointer-events: none;
+}
+
 .line {
   width: 60%;
   height: 5%;
@@ -1165,5 +1171,15 @@ a[href^="tel"] {
 
 .margin--top-bottom {
   margin: 1rem 0;
+}
+
+.pdf {
+  width: 60%;
+  min-height: 80vh;
+}
+
+.disabled {
+  opacity: 0.7;
+  cursor: not-allowed;
 }
 /*# sourceMappingURL=style.css.map */
