--- a/style/style.scss
+++ b/style/style.scss
@@ -265,6 +265,12 @@ a {
 			color: $secondary-color;
 		}
 	}
+
+	&--disabled {
+		cursor: not-allowed;
+		opacity: 1;
+		pointer-events: none;
+	}
 }
 
 .line {
@@ -859,4 +865,16 @@ a[href^="tel"] {
 	&--top-bottom {
 		margin: 1rem 0;
 	}
+}
+
+// PDF iframe
+.pdf {
+	width: 60%;
+	min-height: 80vh;
+}
+
+// Disabled class
+.disabled {
+	opacity: 0.7;
+	cursor: not-allowed;
 }
