--- a/style/style.css
+++ b/style/style.css
@@ -272,6 +272,27 @@ a {
   pointer-events: none;
 }
 
+.btn--close-modal {
+  position: absolute;
+  top: 0;
+  right: 0;
+  margin: 1rem;
+  background: transparent;
+  border: none;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+.btn--close-modal::before {
+  display: none;
+}
+
+.btn--close-modal:hover {
+  background: transparent;
+  -webkit-transform: scale(1.2);
+          transform: scale(1.2);
+}
+
 .line {
   width: 60%;
   height: 5%;
@@ -1181,5 +1202,52 @@ a[href^="tel"] {
 .disabled {
   opacity: 0.7;
   cursor: not-allowed;
+}
+
+.modal__container {
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.8);
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 100;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.modal {
+  width: 50vw;
+  height: 90vh;
+  -o-object-fit: contain;
+     object-fit: contain;
+}
+
+@media screen and (max-width: 1140px) {
+  .modal {
+    width: 95%;
+    height: auto;
+    -o-object-fit: cover;
+       object-fit: cover;
+  }
+}
+
+.in-modal {
+  cursor: pointer;
+}
+
+.hidden {
+  display: none;
 }
 /*# sourceMappingURL=style.css.map */
