--- a/style/style.css
+++ b/style/style.css
@@ -274,13 +274,19 @@ a {
 
 .btn--close-modal {
   position: absolute;
-  top: 0;
-  right: 0;
-  margin: 1rem;
+  top: 2rem;
+  right: 2rem;
   background: transparent;
   border: none;
   -webkit-box-shadow: none;
           box-shadow: none;
+  padding: 0;
+  font-size: 1.5rem;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 0;
+  color: #fd5050;
+  border: 1px solid #fd5050;
 }
 
 .btn--close-modal::before {
@@ -288,9 +294,17 @@ a {
 }
 
 .btn--close-modal:hover {
-  background: transparent;
+  background: #fd5050;
+  color: white;
   -webkit-transform: scale(1.2);
           transform: scale(1.2);
+}
+
+@media screen and (max-width: 1140px) {
+  .btn--close-modal {
+    top: 1rem;
+    right: 1rem;
+  }
 }
 
 .line {
@@ -1228,7 +1242,7 @@ a[href^="tel"] {
 }
 
 .modal {
-  width: 50vw;
+  width: auto;
   height: 90vh;
   -o-object-fit: contain;
      object-fit: contain;
