--- a/style/style.scss
+++ b/style/style.scss
@@ -47,6 +47,7 @@ a {
 
 .h1 {
 	line-height: 130%;
+	font-size: 1.5rem;
 
 	@media screen and (max-width: $medium-display) {
 		font-size: 1.5rem;
@@ -76,17 +77,11 @@ a {
 
 	&--section {
 		width: 100%;
-		height: 30vh;
+		min-height: 40vh;
 	}
 
 	&--margin {
 		margin: 0 1rem;
-	}
-
-	&--overlay {
-		width: 100%;
-		height: 100%;
-		background: white;
 	}
 
 	&--rounded {
@@ -102,7 +97,6 @@ a {
 		@media screen and (max-width: $medium-display) {
 			height: 50vh;
 			width: 100%;
-			background: red;
 		}
 	}
 }
@@ -380,7 +374,7 @@ a {
 }
 
 .a {
-	font-size: 1.2rem;
+	font-size: 1.1rem;
 	color: $primary-color;
 	
 	position: relative;
@@ -444,7 +438,7 @@ a {
 		text-decoration: none;
 		list-style: none;
 		font-size: 1.1rem;
-		padding: 1rem;
+		padding: 0.8rem;
 		cursor: pointer;
 		font-weight: 500;
 		color: $primary-color;
@@ -539,7 +533,7 @@ a[href^="tel"] {
 	position: relative;
 
 	@media screen and (max-width: $medium-display) {
-			width: 100%;
+		width: 100%;
 	}
 }
 
@@ -622,8 +616,11 @@ a[href^="tel"] {
 .img__container {
 
 	&--slogan {
+		width: 10rem;
+		margin: 0 1rem;
+
 		@media screen and (max-width: $medium-display) {
-			width: 7rem;
+			width: 3rem;
 		}		
 	}
 
@@ -667,7 +664,7 @@ a[href^="tel"] {
 	}
 
 	&--overlay {
-		width: 30%;
+		width: 40%;
 		height: auto;
 		object-fit: cover;
 	}
