--- a/style/style.scss
+++ b/style/style.scss
@@ -50,7 +50,7 @@ a {
 	font-size: 1.5rem;
 
 	@media screen and (max-width: $medium-display) {
-		font-size: 1.5rem;
+		font-size: 1rem;
 	}
 }
 
@@ -599,6 +599,16 @@ a[href^="tel"] {
 	}
 }
 
+// Nav li container
+.nav--li__container {
+	@include flex();
+
+	@media screen and (max-width: $medium-display) {
+		@include flex(column);
+		width: 100%;
+	}
+}
+
 // Header
 .header {
 	padding: 0 $padding-horizontal;
@@ -620,7 +630,7 @@ a[href^="tel"] {
 		margin: 0 1rem;
 
 		@media screen and (max-width: $medium-display) {
-			width: 3rem;
+			width: 50vw;
 		}		
 	}
 
