--- a/style/style.scss
+++ b/style/style.scss
@@ -318,11 +318,6 @@ a {
 
 	&--center {
 		@include flex(column, center);
-		background: url(https://images.unsplash.com/photo-1513542789411-b6a5d4f31634?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=967&q=80);
-		background-position: center;
-		background-size: cover;
-		background-attachment: fixed;
-		background-repeat: no-repeat;
 
 		@media screen and (max-width: $medium-display) {
 			background-attachment: scroll;
@@ -527,6 +522,13 @@ a[href^="tel"] {
 		color: $secondary-color;
 		text-align: left;
 	}
+}
+
+// ul and li
+.ul {
+	text-align: left;
+	font-size: 1.2rem;
+	padding-left: 1rem;
 }
 
 // Slogan
@@ -958,4 +960,11 @@ a[href^="tel"] {
 // Class to hide elements
 .hidden {
 	display: none;
+}
+
+// Text styling
+.text {
+	&--underline {
+		text-decoration: underline;
+	}
 }
