--- a/style/style.css
+++ b/style/style.css
@@ -410,7 +410,7 @@ a {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    padding: 12%;
+    padding: 12% 1rem;
   }
 }
 
@@ -1039,6 +1039,7 @@ a[href^="tel"] {
   width: 100%;
   min-height: 20vh;
   padding: 2rem 12%;
+  background: rgba(179, 179, 179, 0.164);
 }
 
 .footer__wrapper {
