--- a/style/style.scss
+++ b/style/style.scss
@@ -352,7 +352,7 @@ a {
 
 	@media screen and (max-width: $medium-display) {
 		@include flex(column);
-		padding: $padding-horizontal;
+		padding: $padding-horizontal 1rem;
 	}
 }
 
@@ -378,7 +378,6 @@ a {
 	
 	position: relative;
 	display: inline-block;
-
 
 	&--h1 {
 		&::after {
@@ -795,6 +794,7 @@ a[href^="tel"] {
 	width: 100%;
 	min-height: 20vh;
 	padding: 2rem $padding-horizontal;
+	background: rgba(179, 179, 179, 0.164);
 }
 
 .footer__wrapper {
