--- a/style/style.css
+++ b/style/style.css
@@ -1217,6 +1217,23 @@ a[href^="tel"] {
   }
 }
 
+.container--documents {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 2rem 0;
+}
+
 .input__container {
   width: auto;
   height: auto;
@@ -1251,6 +1268,14 @@ a[href^="tel"] {
 .pdf {
   width: 60%;
   min-height: 80vh;
+}
+
+.pdf--small {
+  width: auto;
+  min-height: 50vh;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 
 @media screen and (max-width: 1140px) {
@@ -1314,5 +1339,66 @@ a[href^="tel"] {
 
 .text--underline {
   text-decoration: underline;
+}
+
+.menu__container {
+  width: 100%;
+  height: auto;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  overflow-x: auto;
+}
+
+.menu {
+  border: 1px solid #6452ff;
+  border-radius: 20px;
+  padding: 0.5rem 1rem;
+  margin: 0 1rem;
+  cursor: pointer;
+  position: relative;
+  overflow: hidden;
+}
+
+.menu::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  -webkit-transform: translate(0, 100%);
+          transform: translate(0, 100%);
+  background: #6452ff;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  border-radius: 100%;
+}
+
+.menu:hover p {
+  -webkit-transition-delay: 0.1s;
+          transition-delay: 0.1s;
+  color: white;
+}
+
+.menu:hover::after {
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+  border-radius: 20px;
+}
+
+.menu p {
+  font-size: 1rem;
 }
 /*# sourceMappingURL=style.css.map */
