--- a/style/style.scss
+++ b/style/style.scss
@@ -873,6 +873,11 @@ a[href^="tel"] {
 			min-width: 100%;
 		}
 	}
+
+	&--documents {
+		@include flex(row, space-between);
+		margin: 2rem 0;
+	}
 }
 
 // Input container style
@@ -915,6 +920,12 @@ a[href^="tel"] {
 .pdf {
 	width: 60%;
 	min-height: 80vh;
+
+	&--small {
+		width: auto;
+		min-height: 50vh;
+		flex-grow: 1;
+	}
 
 	@media screen and (max-width: $medium-display) {
 		width: 100%;
@@ -966,5 +977,53 @@ a[href^="tel"] {
 .text {
 	&--underline {
 		text-decoration: underline;
+	}
+}
+
+// Menu container
+.menu__container {
+	width: 100%;
+	height: auto;
+	@include flex(row);
+	overflow-x: auto;
+}
+
+.menu {
+	border: 1px solid $secondary-color;
+	border-radius: 20px;
+	padding: 0.5rem 1rem;
+	margin: 0 1rem;
+	cursor: pointer;
+	position: relative;
+	overflow: hidden;
+
+	&::after {
+		content: '';
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		z-index: -1;
+		transform: translate(0, 100%);
+		background: $secondary-color;
+		transition: $transition;
+		border-radius: 100%;
+	}
+
+	&:hover {
+		p {
+			transition-delay: 0.1s;
+			color: white;
+		}
+	}
+
+	&:hover::after {
+		transform: translate(0, 0);
+		border-radius: 20px;
+	}
+
+	p {
+		font-size: 1rem;
 	}
 }
