--- a/style/style.css
+++ b/style/style.css
@@ -1234,6 +1234,24 @@ a[href^="tel"] {
   margin: 2rem 0;
 }
 
+@media screen and (max-width: 1140px) {
+  .container--documents {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .input__container {
   width: auto;
   height: auto;
@@ -1276,6 +1294,12 @@ a[href^="tel"] {
   -webkit-box-flex: 1;
       -ms-flex-positive: 1;
           flex-grow: 1;
+}
+
+@media screen and (max-width: 1140px) {
+  .pdf--small {
+    margin-bottom: 3rem;
+  }
 }
 
 @media screen and (max-width: 1140px) {
@@ -1360,6 +1384,24 @@ a[href^="tel"] {
   overflow-x: auto;
 }
 
+@media screen and (max-width: 1140px) {
+  .menu__container {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .menu {
   border: 1px solid #6452ff;
   border-radius: 20px;
@@ -1368,6 +1410,13 @@ a[href^="tel"] {
   cursor: pointer;
   position: relative;
   overflow: hidden;
+  display: block;
+}
+
+@media screen and (max-width: 1140px) {
+  .menu {
+    min-width: 10rem;
+  }
 }
 
 .menu::after {
