--- a/style/style.scss
+++ b/style/style.scss
@@ -877,6 +877,10 @@ a[href^="tel"] {
 	&--documents {
 		@include flex(row, space-between);
 		margin: 2rem 0;
+
+		@media screen and (max-width: $medium-display) {
+			@include flex(column);
+		}
 	}
 }
 
@@ -925,6 +929,10 @@ a[href^="tel"] {
 		width: auto;
 		min-height: 50vh;
 		flex-grow: 1;
+
+		@media screen and (max-width: $medium-display) {
+			margin-bottom: 3rem;
+		}
 	}
 
 	@media screen and (max-width: $medium-display) {
@@ -986,6 +994,10 @@ a[href^="tel"] {
 	height: auto;
 	@include flex(row);
 	overflow-x: auto;
+
+	@media screen and (max-width: $medium-display) {
+		@include flex(row, space-between);
+	}
 }
 
 .menu {
@@ -996,6 +1008,11 @@ a[href^="tel"] {
 	cursor: pointer;
 	position: relative;
 	overflow: hidden;
+	display: block;
+
+	@media screen and (max-width: $medium-display) {
+		min-width: 10rem;
+	}
 
 	&::after {
 		content: '';
