--- a/style/style.css
+++ b/style/style.css
@@ -1225,9 +1225,9 @@ a[href^="tel"] {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -1416,7 +1416,7 @@ a[href^="tel"] {
 
 @media screen and (max-width: 1140px) {
   .menu {
-    min-width: 10rem;
+    min-width: 9rem;
   }
 }
 
