Hide overflow x on the documents section

--- a/style/style.css
+++ b/style/style.css
@@ -1083,6 +1083,7 @@ a[href^="tel"] {
           flex-grow: 1;
   width: 100%;
   text-align: center;
+  overflow: hidden;
 }
 
 .container--center {
