--- a/style/style.css
+++ b/style/style.css
@@ -30,13 +30,18 @@ a {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  -webkit-box-pack: start;
-      -ms-flex-pack: start;
-          justify-content: flex-start;
-  -webkit-box-align: end;
-      -ms-flex-align: end;
-          align-items: flex-end;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  text-align: left;
   margin: 1rem 0;
+  border: 1px solid #141414;
+  padding: 1rem;
+  width: 50%;
+  border-radius: 10px;
 }
 
 .summary {
@@ -453,7 +458,6 @@ a {
 
 .h4 {
   font-size: 1.3rem;
-  margin-bottom: 1rem;
 }
 
 .a {
@@ -1478,5 +1482,26 @@ a[href^="tel"] {
 .menu p {
   font-size: 1rem;
   pointer-events: none;
+}
+
+.menu--active::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  -webkit-transform: translate(0, 0);
+          transform: translate(0, 0);
+  background: #6452ff;
+  -webkit-transition: 0.3s ease;
+  transition: 0.3s ease;
+  border-radius: 100%;
+  border-radius: 20px;
+}
+
+.menu--active p {
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
