--- a/style/style.scss
+++ b/style/style.scss
@@ -47,8 +47,13 @@ a {
 
 // Details
 .details {
-	@include flex(column, flex-start, flex-end);
+	@include flex(column, center, flex-start);
+	text-align: left;
 	margin: 1rem 0;
+	border: 1px solid $primary-text-color;
+	padding: 1rem;
+	width: 50%;
+	border-radius: 10px;
 }
 
 // Summary
@@ -385,7 +390,6 @@ a {
 
 .h4 {
 	font-size: 1.3rem;
-	margin-bottom: 1rem;
 }
 
 .a {
@@ -1061,5 +1065,26 @@ a[href^="tel"] {
 	p {
 		font-size: 1rem;
 		pointer-events: none;
+	}
+
+	&--active {			
+		&::after {
+			content: '';
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			z-index: -1;
+			transform: translate(0, 0);
+			background: $secondary-color;
+			transition: $transition;
+			border-radius: 100%;
+			border-radius: 20px;
+		}
+
+		p {
+			color: white;
+		}
 	}
 }
