When user scrolls top the navigation shows

--- a/style/style.scss
+++ b/style/style.scss
@@ -570,7 +570,8 @@ a[href^="tel"] {
 	box-shadow: $box-shadow;
 	padding: 1rem $padding-horizontal;
 	position: relative;
-	z-index: 2;
+	z-index: 5;
+	background: rgb(255, 255, 255);
 
 	@media screen and (max-width: $medium-display) {
 		padding: 1rem;
