--- a/style/style.css
+++ b/style/style.css
@@ -670,7 +670,8 @@ a[href^="tel"] {
           box-shadow: 0 0 10px 2px rgba(0, 0, 0, 0.2);
   padding: 1rem 12%;
   position: relative;
-  z-index: 2;
+  z-index: 5;
+  background: white;
 }
 
 @media screen and (max-width: 1140px) {
