--- a/style/style.css
+++ b/style/style.css
@@ -137,6 +137,10 @@ a {
   color: white;
 }
 
+.p--black {
+  color: black;
+}
+
 .p--left {
   text-align: left;
 }
@@ -815,7 +819,10 @@ a[href^="tel"] {
   padding: 0 12%;
   width: 100%;
   min-height: 70vh;
-  background: #47d3a4;
+  background: url("/assets/child_with_book.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1121,6 +1128,8 @@ a[href^="tel"] {
   width: 100%;
   text-align: center;
   overflow: hidden;
+  position: relative;
+  z-index: 1;
 }
 
 .container--center {
@@ -1518,5 +1527,25 @@ a[href^="tel"] {
 
 .menu--active p {
   color: white;
+}
+
+.page--documents {
+  background: url("/assets/pencil_background.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  min-height: 80vh;
+  position: relative;
+}
+
+.page--documents::after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(255, 255, 255, 0.4);
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 /*# sourceMappingURL=style.css.map */
