--- a/style/style.css
+++ b/style/style.css
@@ -935,6 +935,9 @@ a[href^="tel"] {
 .header__content {
   width: 35%;
   z-index: 2;
+  background: rgba(0, 0, 0, 0.8);
+  padding: 1rem;
+  border-radius: 20%;
 }
 
 .header__content h2 {
@@ -945,8 +948,10 @@ a[href^="tel"] {
 
 @media screen and (max-width: 1140px) {
   .header__content {
-    width: 70%;
+    width: 80%;
     margin-top: 1rem;
+    border-radius: 5%;
+    padding: 1rem;
   }
 }
 
