--- a/style/style.scss
+++ b/style/style.scss
@@ -735,6 +735,9 @@ a[href^="tel"] {
 .header__content {
 	width: 35%;
 	z-index: 2;
+	background: rgba(0, 0, 0, 0.8);
+	padding: 1rem;
+	border-radius: 20%;
 
 	h2 {
 		font-size: 3rem;
@@ -743,8 +746,10 @@ a[href^="tel"] {
 	}
 
 	@media screen and (max-width: $medium-display) {
-		width: 70%;
+		width: 80%;
 		margin-top: 1rem;
+		border-radius: 5%;
+		padding: 1rem;
 	}
 }
 
