--- a/style/style.css
+++ b/style/style.css
@@ -1539,6 +1539,7 @@ a[href^="tel"] {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
+  background-attachment: fixed;
   min-height: 80vh;
   position: relative;
 }
@@ -1548,7 +1549,7 @@ a[href^="tel"] {
   position: absolute;
   top: 0;
   left: 0;
-  background: rgba(255, 255, 255, 0.4);
+  background: rgba(255, 255, 255, 0.6);
   width: 100%;
   height: 100%;
   z-index: 0;
