--- a/style/style.scss
+++ b/style/style.scss
@@ -1125,6 +1125,7 @@ a[href^="tel"] {
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
+		background-attachment: fixed;
 		min-height: 80vh;
 		position: relative;
 
@@ -1133,7 +1134,7 @@ a[href^="tel"] {
 			position: absolute;
 			top: 0;
 			left: 0;
-			background: rgba(255, 255, 255, 0.4);
+			background: rgba(255, 255, 255, 0.6);
 			width: 100%;
 			height: 100%;
 			z-index: 0;
