--- a/style/style.css
+++ b/style/style.css
@@ -830,9 +830,9 @@ a[href^="tel"] {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
@@ -936,8 +936,8 @@ a[href^="tel"] {
   width: 35%;
   z-index: 2;
   background: rgba(0, 0, 0, 0.8);
-  padding: 1rem;
-  border-radius: 20%;
+  padding: 1rem 2rem;
+  border-radius: 10%;
 }
 
 .header__content h2 {
