--- a/style/style.css
+++ b/style/style.css
@@ -13,7 +13,7 @@ body {
   width: 100%;
   min-height: 100vh;
   background: white;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   overflow-x: hidden;
 }
 
@@ -182,7 +182,7 @@ a {
 .btn::before {
   -webkit-transition: 0.3s ease;
   transition: 0.3s ease;
-  content: '';
+  content: "";
   position: absolute;
   top: 5%;
   left: 5%;
@@ -412,7 +412,7 @@ a {
 }
 
 .section--background::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -478,7 +478,7 @@ a {
 }
 
 .a--h1::after {
-  content: '';
+  content: "";
   border-bottom: 2px solid red;
   position: absolute;
   left: 0;
@@ -502,7 +502,7 @@ a {
 }
 
 .a--social::after {
-  content: '';
+  content: "";
   border-bottom: 2px solid red;
   position: absolute;
   left: 0;
@@ -554,7 +554,7 @@ a {
 }
 
 .a--link:hover::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -565,7 +565,7 @@ a {
 }
 
 .a--link:hover::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
@@ -580,7 +580,7 @@ a {
 }
 
 .a--active::before {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -591,7 +591,7 @@ a {
 }
 
 .a--active::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   right: 0;
@@ -876,7 +876,7 @@ a[href^="tel"] {
 }
 
 .img__container--header::before {
-  content: '';
+  content: "";
   position: absolute;
   background: rgba(158, 151, 44, 0.5);
   z-index: -1;
@@ -1304,7 +1304,7 @@ a[href^="tel"] {
   }
 }
 
-.container--prezi {
+.container--presentation {
   width: 80%;
   height: 80vh;
 }
@@ -1481,7 +1481,7 @@ a[href^="tel"] {
 }
 
 .menu::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -1514,7 +1514,7 @@ a[href^="tel"] {
 }
 
 .menu--active::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -1545,7 +1545,7 @@ a[href^="tel"] {
 }
 
 .page--documents::after {
-  content: '';
+  content: "";
   position: absolute;
   top: 0;
   left: 0;
@@ -1553,5 +1553,12 @@ a[href^="tel"] {
   width: 100%;
   height: 100%;
   z-index: 0;
+}
+
+.presentation {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 100%;
 }
 /*# sourceMappingURL=style.css.map */
