--- a/style/style.scss
+++ b/style/style.scss
@@ -35,7 +35,8 @@ body {
 	width: 100%;
 	min-height: 100vh;
 	background: rgb(255, 255, 255);
-	font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+	font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS",
+		sans-serif;
 	overflow-x: hidden;
 }
 
@@ -80,7 +81,7 @@ a {
 		font-size: 2rem;
 		margin-bottom: 2rem;
 	}
-	
+
 	@media screen and (max-width: $medium-display) {
 		font-size: 1.5rem;
 	}
@@ -113,7 +114,6 @@ a {
 	}
 
 	&--o-nas {
-		
 		@media screen and (max-width: $medium-display) {
 			height: 50vh;
 			width: 100%;
@@ -187,7 +187,7 @@ a {
 
 	&::before {
 		transition: $transition;
-		content: '';
+		content: "";
 		position: absolute;
 		top: 5%;
 		left: 5%;
@@ -224,11 +224,11 @@ a {
 			background: $secondary-color;
 			padding: 5px;
 			@include flex(column);
-	
+
 			&::before {
 				display: none;
 			}
-	
+
 			&:hover {
 				background: $secondary-color;
 			}
@@ -356,7 +356,7 @@ a {
 		background-attachment: fixed;
 
 		&::after {
-			content: '';
+			content: "";
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -403,19 +403,19 @@ a {
 .a {
 	font-size: 1.1rem;
 	color: $primary-color;
-	
+
 	position: relative;
 	display: inline-block;
 
 	&--h1 {
 		&::after {
-		content: '';
-		border-bottom: 2px solid red;
-		position: absolute;
-		left: 0;
-		bottom: 0;
-		width: 100%;
-		transition: $transition;
+			content: "";
+			border-bottom: 2px solid red;
+			position: absolute;
+			left: 0;
+			bottom: 0;
+			width: 100%;
+			transition: $transition;
 		}
 
 		&:hover::after {
@@ -432,7 +432,7 @@ a {
 		font-size: 1.2rem;
 
 		&::after {
-			content: '';
+			content: "";
 			border-bottom: 2px solid red;
 			position: absolute;
 			left: 0;
@@ -480,7 +480,7 @@ a {
 			color: $secondary-color;
 
 			&::before {
-				content: '';
+				content: "";
 				position: absolute;
 				top: 0;
 				left: 0;
@@ -489,9 +489,9 @@ a {
 				border: 1px solid $secondary-color;
 				border-right: none;
 			}
-	
+
 			&::after {
-				content: '';
+				content: "";
 				position: absolute;
 				top: 0;
 				right: 0;
@@ -501,14 +501,13 @@ a {
 				border-left: none;
 			}
 		}
-
 	}
 
 	&--active {
 		color: $primary-text-color;
 
 		&::before {
-			content: '';
+			content: "";
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -519,7 +518,7 @@ a {
 		}
 
 		&::after {
-			content: '';
+			content: "";
 			position: absolute;
 			top: 0;
 			right: 0;
@@ -534,7 +533,7 @@ a {
 a[href^="tel"] {
 	color: inherit; /* Inherit text color of parent element. */
 	text-decoration: none; /* Remove underline. */
-  }
+}
 
 .input {
 	outline: none;
@@ -607,7 +606,7 @@ a[href^="tel"] {
 			opacity: 1;
 			overflow: auto;
 			transform-origin: 0 0;
-			transform:  translateY(0) rotate(0);
+			transform: translateY(0) rotate(0);
 		}
 	}
 
@@ -616,7 +615,6 @@ a[href^="tel"] {
 			overflow: hidden;
 			transform: translateY(50%) rotate(90deg);
 		}
-		
 	}
 
 	&--li {
@@ -648,7 +646,7 @@ a[href^="tel"] {
 	padding: 0 $padding-horizontal;
 	width: 100%;
 	min-height: 70vh;
-	background: url('/assets/child_with_book.jpg');
+	background: url("/assets/child_with_book.jpg");
 	background-position: center;
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -662,14 +660,13 @@ a[href^="tel"] {
 }
 
 .img__container {
-
 	&--slogan {
 		width: 10rem;
 		margin: 0 1rem;
 
 		@media screen and (max-width: $medium-display) {
 			width: 50vw;
-		}		
+		}
 	}
 
 	&--header {
@@ -679,7 +676,7 @@ a[href^="tel"] {
 		z-index: 1;
 
 		&::before {
-			content: '';
+			content: "";
 			position: absolute;
 			background: rgba(158, 151, 44, 0.5);
 			z-index: -1;
@@ -700,7 +697,7 @@ a[href^="tel"] {
 		height: auto;
 		position: relative;
 		z-index: 1;
-		
+
 		@media screen and (max-width: $medium-display) {
 			width: 100%;
 			margin: 1rem;
@@ -784,10 +781,9 @@ a[href^="tel"] {
 	border-radius: 9rem;
 	background: $secondary-text-color;
 	box-shadow: 5px 5px 30px 1px rgba(0, 0, 0, 0.3);
-	
+
 	@include flex(column, space-around);
 
-	
 	@media screen and (max-width: $medium-display) {
 		width: 100%;
 		margin: 1rem 0;
@@ -923,8 +919,8 @@ a[href^="tel"] {
 			@include flex(column, flex-start, flex-start);
 		}
 	}
-	
-	&--prezi {
+
+	&--presentation {
 		width: 80%;
 		height: 80vh;
 	}
@@ -976,7 +972,7 @@ a[href^="tel"] {
 		min-height: 50vh;
 		flex-grow: 1;
 		margin: 0 2rem;
-		
+
 		@media screen and (max-width: $medium-display) {
 			margin-bottom: 3rem;
 		}
@@ -1003,7 +999,7 @@ a[href^="tel"] {
 	top: 0;
 	left: 0;
 	z-index: 100;
-	@include flex(column, center, center)
+	@include flex(column, center, center);
 }
 
 .modal {
@@ -1065,7 +1061,7 @@ a[href^="tel"] {
 	}
 
 	&::after {
-		content: '';
+		content: "";
 		position: absolute;
 		top: 0;
 		left: 0;
@@ -1095,9 +1091,9 @@ a[href^="tel"] {
 		pointer-events: none;
 	}
 
-	&--active {			
+	&--active {
 		&::after {
-			content: '';
+			content: "";
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -1120,7 +1116,7 @@ a[href^="tel"] {
 // Page styling
 .page {
 	&--documents {
-		background: url('/assets/pencil_background.jpg');
+		background: url("/assets/pencil_background.jpg");
 		background-repeat: no-repeat;
 		background-size: cover;
 		background-position: center;
@@ -1129,7 +1125,7 @@ a[href^="tel"] {
 		position: relative;
 
 		&::after {
-			content: '';
+			content: "";
 			position: absolute;
 			top: 0;
 			left: 0;
@@ -1139,4 +1135,11 @@ a[href^="tel"] {
 			z-index: 0;
 		}
 	}
+}
+
+// Presentation styling
+.presentation {
+	object-fit: cover;
+	width: 100%;
+	height: 100%;
 }
