Added new documents

--- a/style/style.css
+++ b/style/style.css
@@ -403,6 +403,40 @@ a {
   }
 }
 
+.section--spacebetween {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+@media screen and (max-width: 1140px) {
+  .section--spacebetween {
+    background-attachment: scroll;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -ms-flex-pack: distribute;
+        justify-content: space-around;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .section--background {
   background: url(https://parafiaslough.org/wp-content/uploads/2018/12/PA270886-1.jpg);
   background-repeat: no-repeat;
@@ -1248,6 +1282,43 @@ a[href^="tel"] {
   }
 }
 
+.container--space-between {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-flex: 0;
+      -ms-flex-positive: 0;
+          flex-grow: 0;
+}
+
+@media screen and (max-width: 1140px) {
+  .container--space-between {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
+
 .container--description {
   margin: 2rem 0;
 }
@@ -1356,6 +1427,21 @@ a[href^="tel"] {
 
 @media screen and (max-width: 1140px) {
   .pdf--small {
+    margin-bottom: 3rem;
+  }
+}
+
+.pdf--medium {
+  width: 30vw;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
+  margin: 0 2rem;
+}
+
+@media screen and (max-width: 1140px) {
+  .pdf--medium {
+    margin: 0;
     margin-bottom: 3rem;
   }
 }
