--- a/style/style.css
+++ b/style/style.css
@@ -1491,6 +1491,7 @@ a[href^="tel"] {
   height: 90vh;
   -o-object-fit: contain;
      object-fit: contain;
+  background: white;
 }
 
 @media screen and (max-width: 1140px) {
